<resources>
    <string name="app_name">Overeating-self-helping</string>

    <string name="day_list_fragment_title">Список за сегодня</string>
    <string name="day_list_fragment_today_title">Сегодня</string>
    <string-array name="filters_array">
        <item>по умолчанию</item>
        <item>сначала вредные</item>
    </string-array>
    <string-array name="item_action_array">
        <item>Изменить</item>
        <!--        <item>Удалить</item>-->
    </string-array>


    <!-- Add new meal screen   -->
    <string name="new_meal_fragment_title">Добавить запись</string>
    <string name="add_meal_meal_input_hint">Потребленные еда и напитки</string>
    <string name="add_meal_place_input_hint">Место</string>
    <string name="add_meal_feelings_input_hint">Мысли и чувства</string>
    <string name="add_meal_necessity_checkbox_text">Лишнее потребление</string>
    <string name="add_meal_replacement_checkbox_text">Произведена замена</string>
    <string name="add_meal_button_change_date">Изменить дату</string>
    <string name="add_meal_button_add">Добавить запись</string>
    <string name="add_meal_success_snack">Добавлено</string>
    <string name="add_meal_error_snack">Не удалось. Повторить?</string>
    <string name="add_meal_repeat_snack">Повторить</string>

    <string name="item_necessity">Лишнее</string>
    <string name="item_replacement">Была замена</string>
</resources>
